grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: LoadBalancer
  selector:
    app: grafana  # L'étiquette du pod Grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
